[tool.poetry]
name = "punctual"
version = "0.1.0"
description = ""
authors = ["Mark Rawls <markrawls96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
sphinx = "^2.2"
sphinx-rtd-theme = "^0.4.3"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pcl = 'punctual:cli.cli'
