[tool.poetry]
name = "punctual"
version = "0.1.4"
description = "Clean and simple docfile management with a lot of flexibility"
authors = ["Mark Rawls <markrawls96@gmail.com>"]

readme = 'README.rst'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
sphinx = "^2.2"
sphinx-rtd-theme = "^0.4.3"
flake8 = "^3.7"

[tool.poetry.scripts]
pcl = 'punctual:cli.cli'
[build-system]
requires = ["poetry>=0.12", "rtd-poetry"]
build-backend = "poetry.masonry.api"
